--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Matschik <mathieu.schimmerling@protonmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@fastify/cors": "^8.4.2",
     "fastify": "^4.24.0"
   },
   "devDependencies": {
