--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^8.4.2",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "fastify": "^4.24.0"
   },
   "devDependencies": {
