--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fastify/cors": "^8.4.2",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
+    "ethers": "5.7.x",
     "fastify": "^4.24.0"
   },
   "devDependencies": {
