--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "ethers": "5.7.0",
-    "fastify": "^4.24.0"
+    "fastify": "^4.24.0",
+    "fastify-healthcheck": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
