--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development nodemon",
     "format": "prettier --write \"src/**/*.ts\"",
     "build": "rimraf dist && tsc",
-    "start": "node dist/index.js"
+    "start": "fastify start -l info -a 0.0.0.0 app.js"
   },
   "author": "Matschik <mathieu.schimmerling@protonmail.com>",
   "license": "MIT",
